# write-os-in-rust

./: Cargo.toml  README.md  reformat
.cargo/: config
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shortcuts.rs  startup.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs
src/devices/: pci.rs
src/games/: paddle.rs
src/pci/: comms.rs  detect.rs  mod.rs  model.rs
src/pci/database/: class_ids.rs  device_ids.rs  mod.rs  prog_if_ids.rs  subclass_ids.rs  vendor_ids.rs
src/pcnet/: buffers.rs  device.rs  mod.rs  ports.rs  support.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
